# PDQminer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  platformio.ini  serial_monitor.py  verify_header.py  verify_job.py  verify_job2.py  verify_pipeline.py
.github/workflows/: ci.yml  release.yml
docs/: coding-standards.md  documentation-standards.md  sdd.md  tdd.md
docs/agents/: agent-memory.md  agent-prompts.md
docs/research/: nerdminer-sha256-analysis.md
platform/linux/: .gitignore  CMakeLists.txt  README.md  linux_config.c  linux_display.c  linux_hal.c  linux_mining.c  linux_wifi.c  main.c
src/: main.cpp  main_benchmark.cpp  pdq_types.h
src/api/: device_api.c  device_api.h
src/config/: config_manager.c  config_manager.h
src/core/: mining_task.c  mining_task.h  sha256_engine.c  sha256_engine.h
src/display/: display_driver.c  display_driver.cpp  display_driver.h
src/hal/: board_hal.c  board_hal.h
src/network/: wifi_manager.c  wifi_manager.cpp  wifi_manager.h
src/stratum/: stratum_client.c  stratum_client.h
test/benchmark/: test_sha256_benchmark.cpp
tools/: nop_search.py  test_serial.py
tools/pdqflasher/: README.md  pyproject.toml  requirements.txt
tools/pdqflasher/pdqflasher/: __init__.py  __main__.py  cli.py  config.py  detector.py  flasher.py
tools/pdqflasher/tests/: conftest.py  test_cli.py  test_config.py  test_detector.py  test_flasher.py
tools/pdqmanager/: README.md  pyproject.toml  requirements.txt
tools/pdqmanager/pdqmanager/: __init__.py  __main__.py  api.py  app.py  cli.py  device.py  discovery.py  manager.py  models.py
tools/pdqmanager/pdqmanager/static/css/: style.css
tools/pdqmanager/pdqmanager/static/js/: app.js
tools/pdqmanager/pdqmanager/templates/: base.html  device.html  index.html  settings.html
tools/pdqmanager/tests/: conftest.py  test_api.py  test_device.py  test_discovery.py
